js/js.translator/testData/incremental/invalidation/functionTypeInterface/lib2/l2a.7.kt
fun getString(): String {
    val s: Any = 123
    return getTypeName(s)
}
